--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
+/*Header*/
+
+
+/*Footer*/
+
+
+/*Board*/
 #board {
   margin-top: 10px;
 }
-
 .box {
   border: 1px solid #808080;
   height: 150px;
   background-color: #F0F0F0;
 }
 .box > h1 {
-	text-align: center;
-	color: red;
+  text-align: center;
+  color: red;
 }
 .display-table{
     display: table;
@@ -21,6 +27,27 @@
     vertical-align: middle;
     float: none;
 }
+
+/*Pills*/
+
+
+/*Rules*/
+
+
+/*Buttons*/
 .btnpad {
-	margin-top:15px;
+  margin-top:15px;
 }
+
+@media screen and (max-width: 750px) {
+  .container {
+    margin: 0px 30px 0px 30px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .box {
+    height: 75px;
+  }
+}
+
+
